# COCOON-Sionna

./: .gitignore  README.md  access_point_spec.yml  pyproject.toml  requirements.txt
article/: abbr.tex  bib.bib  main.tex  preamble.tex
article/definitions/: def-cmd.tex  def-colors.tex  def-figures.tex  def-tikz.tex
article/figures/: README.md
article/sections/: 00_abstract_note.tex  01_introduction.tex  02_cocoon_scope.tex  03_system_model.tex  04_simulation_setup.tex  05_results_geometry.tex  06_results_sinr.tex  07_results_relocation.tex  08_discussion_limits.tex  09_conclusion.tex
data/boundaries/: rabot_bbox.geojson
data/candidate_sites/: etoile_demo_sites.csv  rabot_seed_sites.csv
data/mobility/: etoile_walk_graph.json
outputs/rabot/: candidate_ap_positions.csv  central_ap_rooftop_candidates.csv  central_massive_mimo_ap.csv  central_massive_mimo_schedule.csv  distributed_fixed_aps.csv  distributed_fixed_schedule.csv  distributed_movable_aps.csv  distributed_movable_optimization_2_aps.csv  (+14 more)
scenarios/: etoile_demo.yaml  rabot.yaml
scripts/: analyze_ap_schedule.py  analyze_sinr_snapshots.py  analyze_strategy_performance.py  build_manuscript_report.py  run_all_postprocessing.py  visualize_mobile_ap_schedule.py
tests/: test_cli.py  test_config.py  test_mobile_ap_schedule_viz.py  test_mobility.py  test_no_ray_tracing.py  test_optimization.py  test_osm.py  test_pipeline_build_scene.py  test_pipeline_helpers.py  test_postprocess.py  test_radiomap_pipeline.py  test_scene_builder_helpers.py  test_sionna_rt_adapter.py  test_sites.py  test_smoke_pipeline.py
(+439 files in other folders)
